--- a/public/style.css
+++ b/public/style.css
@@ -106,9 +106,12 @@ main {
 }
 
 .article_comments {
+    padding: 20px 20px 100px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin-top: 30px;
+    background-color: #f0f0f0;
 }
 
 
@@ -171,6 +174,11 @@ h2 {
 
 h3 {
     font-size: 20px;
+    color: black;
+}
+
+h4 {
+    font-size: 18px;
     color: black;
 }
 
@@ -257,11 +265,15 @@ h3 {
 }
 
 .timestamp {
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
 }
 
 .comment_count {
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
     color: #857b7b;
     font-size: 12px;
     font-weight: 300;
