--- a/views/see.ejs
+++ b/views/see.ejs
@@ -77,9 +77,47 @@
           </p>
           <br/><br/>
           <hr />
-          <div class="article_comments">
-            <h4>Comments</h4>
+          
+        </div>
+        <div class="article_comments">
+            <%if (comments.length > 0) { %>
+          <div class="row"><h4>Comments</h4></div>
+          <div class="row" style="width: 80%;">
+              <% comments.map(comment => { %>
+
+                <div class="col s12 m12">
+                <div class="card">
+                    <div class="card-content black-text">
+                    <p><%= comment.content %></p>
+                    </div>
+                    <div class="card-action" style="font-size: small;">
+                        By: <%= comment.author%>
+                    </div>
+                </div>
+                </div>
+              <% }) %>
           </div>
+          <hr />
+          <% } %>
+          <div class="row" ><h4>Write a Comment</h4></div>
+              <form style="width: 80%; margin: 0 auto;" class="col s12" method="post" action="/newcomment">
+                  <input type="hidden" name="articleId" value=<%= article._id %> >
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input name="name" type="text" class="validate">
+                    <label for="name">Name</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input name="content" type="text" class="validate">
+                    <label for="content">Comment</label>
+                  </div>
+                </div>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                  <i class="fas fa-paper-plane"></i>
+                </button>
+              </form>
         </div>
       </div>
     </main>
