--- a/public/style.css
+++ b/public/style.css
@@ -141,16 +141,15 @@ main {
 
 /******************************/
 
-.grid {
+/* .grid {
     margin-top: 50px;
-    /* margin: 0 auto; */
     min-height: 100%;
     z-index: 1;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     padding: 10px;
-}
+} */
 
 a {
     color: rgb(255, 0, 0);
@@ -192,11 +191,38 @@ h4 {
     text-decoration: none;
 }
 
+/* ---- grid ---- */
+
+.grid-wrapper{
+    width: 100%;
+    position: absolute;
+    margin: 0 auto;
+}
+
+.grid {
+    padding-top: 50px;
+    margin: 0 auto;
+  }
+  
+  /* ---- grid-item ---- */
+  
+  .grid-sizer,
+  .grid-item {
+    width: calc((100% - 0px)/4);
+  }
+  
+  .grid-item {
+    padding:10px;
+  }
+  
+  .grid-item img {
+    display: block;
+    width: 100%;
+  }
+  
 /******** CARD **********/
 
 .card-item {
-    width: 360px;
-    /* width: 33%; */
     position: relative;
     border-radius: 10px;
     background-color: #ffffff;
@@ -204,7 +230,7 @@ h4 {
     justify-content: flex-start;
     flex-direction: column;
     box-shadow: 0 4px 9px #f1f1f4;
-    margin: 10px;
+    /* margin: 10px; */
     overflow: hidden;
 }
 
@@ -292,15 +318,11 @@ h4 {
     text-decoration: none;
 }
 
-@media screen and (max-width: 1440px) {
-    .card-item {
-        width: 333px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .card-item {
-        width: 312px;
+/* Media Query */
+@media screen and (max-width: 1280px) {
+    .grid-sizer,
+    .grid-item {
+      width: calc((100% - 0px)/3);
     }
 }
 
@@ -309,15 +331,16 @@ h4 {
         min-height: 100%;
         width: 100%;
     }
-
-    .card-item {
-        width: 350px;
+    .grid-sizer,
+    .grid-item {
+      width: calc((100% - 0px)/2);
     }
 }
 
 @media screen and (max-width: 425px) {
-    .card-item {
-        width: 90%;
+    .grid-sizer,
+    .grid-item {
+      width: calc((100% - 0px)/1);
     }
 }
 
@@ -330,5 +353,9 @@ h4 {
 @media screen and (max-width: 320px) {
     main {
         margin-top: 0px;
+    }
+    .grid-sizer,
+    .grid-item {
+      width: calc((100% - 0px)/1);
     }
 }
